avoid white spaces

--- a/client/src/app/buzz/buzz.component.scss
+++ b/client/src/app/buzz/buzz.component.scss
@@ -9,7 +9,7 @@
 
 .background-section {
   background-color: #DDDDDD;
-  height: 100%;
+  min-height: 100%;
   width: 100%;
 }
 
