--- a/client/src/app/home/home.component.scss
+++ b/client/src/app/home/home.component.scss
@@ -20,7 +20,7 @@
 .background-section {
   background-color: #DDDDDD;
   height: 100%;
-  width: 100%;
+  min-width: 100%;
 }
 
 .access-card {
